--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media Analytics Dashboard</title>
+    <!-- Note: Replace with compiled Tailwind CSS for production -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -180,8 +181,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/static/js/app.js"></script>
-    <script src="/static/js/ui.js"></script>
+    <!-- Scripts - Load in correct order -->
     <script src="/static/js/api.js"></script>
+    <script src="/static/js/ui.js"></script>
+    <script src="/static/js/app.js"></script>
 </body>
 </html>
